--- a/css/style.css
+++ b/css/style.css
@@ -37,10 +37,23 @@ body {
  * Header
  */
 
+.nav_logo{
+    margin-bottom: 30px;
+    height: 50px;
+}
+
+.nav_login {
+    margin-top: 10px;
+}
+
+.header{
+    -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+    box-shadow: 0 0 50px rgba(0,0,0,.5);
+    background-color: #b72a2a;
+}
+
 @media (min-width: 768px) {
     .nav_logo {
-        margin-bottom: 30px;
-        height: 50px;
         float: left;
     }
     .nav_login {
@@ -61,8 +74,6 @@ body {
     padding: 10px 20px;
     font-weight: bold;
 }
-
-
 /*
  * Affix and center
  */
@@ -71,9 +82,6 @@ body {
     /* Pull out the header and footer */
     .header {
         position: fixed;
-        -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-        box-shadow: 0 0 50px rgba(0,0,0,.5);
-        background-color: #b72a2a;
         top: 0;
     }
     .footer {
