--- a/css/style.css
+++ b/css/style.css
@@ -150,3 +150,15 @@ body {
     line-height: normal;
     vertical-align: middle;
 }
+
+@media (max-width: 500px) {
+    .login-text {
+        margin-bottom: 6px;
+    }
+    .nav-login {
+        display: inline-grid;
+    }
+    .nav-logo{
+         margin-bottom: 0px;
+    }
+}
