--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ body {
     border-radius: 3px;
     font-size: 14px;
     border: 1px solid transparent;
-    color: #b2aab9;
+    color: #000;
     -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.15);
     -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.15);
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.15);
