--- a/css/style.css
+++ b/css/style.css
@@ -247,3 +247,47 @@ h1{
 .inner-cover{
     z-index: 1;
 }
+
+/*
+*Notif
+*/
+
+
+.div-info-base, .div-info-actif{
+    text-shadow: none;
+    border: 1px solid black;
+    padding: 7px 20px;
+    position: fixed;
+    z-index: 3;
+    box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.4);
+    margin:0;
+    text-align: center;
+    color: black;
+    font-size: 0.9em;
+    width: 250px;
+    left : 50%;
+    margin-left : -125px;
+}
+
+.div-info-base{
+    top: -100px;
+    transition: all 1s;
+}
+
+.div-info-actif{
+    top: 30px;
+    transition: all 1s;
+}
+
+.container-info{
+    display: inline-block;
+    /* reset container's center alignment */
+    text-align: left;
+}
+
+.img-info{
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    cursor: pointer;
+}
