--- a/css/styleRegister.css
+++ b/css/styleRegister.css
@@ -7,11 +7,6 @@
   padding: 0;
 }
 
-body {
-  font-family: "Open Sans";
-  font-size: 14px;
-}
-
 .container {
   width: 500px;
   margin: 25px auto;
@@ -19,11 +14,7 @@ body {
 
 form {
   padding: 20px;
-  background: #2c3e50;
   color: #fff;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
 }
 form label,
 form input,
@@ -54,8 +45,27 @@ form button {
 form .error {
   color: #ff0000;
 }
+form .btn-home{
+  text-align: center;
+}
 
 #form input.error {
 border:1px solid red;
 }
 
+h2{
+  color: white;
+}
+
+.cover{
+  max-width: 500px;
+  font-size: 14px;
+  margin: 25px auto;
+}
+
+@media (min-width: 768px) {
+  /* Start the vertical centering */
+  .site-wrapper-inner {
+    vertical-align: middle !important;
+  }
+}
