--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,19 @@ h1{
     margin-left: 5px;
 }
 
+.btn-disabled{
+    background-color: #691c1c;
+    border: 1px solid #561616;
+    box-shadow: inset 0 1px 0 #850907;
+    color: #9b9b9b;
+}
+
+.btn-disabled:hover{
+    background-color: #691c1c;
+    color: #9B9B9B;
+    cursor: default;
+}
+
 @media (max-width: 768px) {
     .img-home {
         display: none;
@@ -269,7 +282,7 @@ h1{
     }
     /* Start the vertical centering */
     .site-wrapper-inner {
-        vertical-align: bottom;
+        vertical-align: middle;
     }
     /* Handle the widths */
     .masthead,
