--- a/css/styleGame.css
+++ b/css/styleGame.css
@@ -125,3 +125,10 @@ h1{
     padding: 40px 100px 200px 100px;
     box-shadow: 0px 0px 15px rgba(0,0,0,0.4);
 }
+
+#theme{
+    padding: 10px 15px;
+    border: 1px solid white;
+    border-radius: 5px;
+    color: white;
+}
