--- a/css/styleAdmin.css
+++ b/css/styleAdmin.css
@@ -55,7 +55,7 @@ body{
     border-bottom: 1px solid white;
     margin: 0px -10px;
     border-radius: 5px 5px 0px 0px;
-    background-color: blue;
+    background-color: #b72a2a;
 }
 
 .qst-unit div{
