--- a/css/styleRoom.css
+++ b/css/styleRoom.css
@@ -184,8 +184,12 @@ a.list-group-item{
     background-color: #5bc0de;
 }
 
+.inner.cover {
+    margin-top: 150px;
+}
+
 @media (min-width: 768px) {
     .cover {
-        margin: 150px 20px;
+        margin-top: 150px;
     }
 }
